# web-to-desktop-framework-comparison

./: .gitignore  Benchmark.txt  CONTRIBUTING.md  GRAPHS.md  LICENSE  README.md  REPORT.md  SECURITY.md
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: macOS.yaml  runner.yaml  stars.yaml  ubuntu.yaml  windows.yaml
benchmark/: updater.sh
benchmark/01-empty-app/DotnetMaui/: DotnetMaui.sln
benchmark/01-empty-app/DotnetMauiVue/: .gitignore  DotnetMauiVue.sln
benchmark/01-empty-app/electron/: main.js  package-lock.json  package.json
benchmark/01-empty-app/flutter/: README.md  pubspec.yaml
benchmark/01-empty-app/neutralinojs/: .gitignore  LICENSE  README.md  neutralino.config.json  neutralinojs-linux  neutralinojs-mac
benchmark/01-empty-app/nodegui/: .gitignore  package-lock.json  package.json
benchmark/01-empty-app/nw.js/: build.js  main.js  package-lock.json  package.json
benchmark/01-empty-app/tauri/: .gitignore  package-lock.json  package.json
benchmark/01-empty-app/tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
benchmark/01-empty-app/tauri/src-tauri/src/: cmd.rs  main.rs
benchmark/01-empty-app/wails/: go.mod  go.sum  (+2 more)
benchmark/02-empty-app-headless/tauri/src-tauri/: Cargo.toml  tauri.conf.json
benchmark/02-empty-app-headless/tauri/src-tauri/src/: main.rs
runner/: README.template.begin.md  README.template.end.md  benchmarks.json  config.js  data.json  get-readme-order.js  package-lock.json  package.json  postprocess.sh  preprocess.sh  runner.js  stats.js  stats.json  write_graphsdotmd.js  write_readme.js  writer.js
(+118 files in other folders)
